cluster/apps/ttrss/mercury-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mercury
  namespace: ttrss
  labels:
    app: mercury
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: mercury

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mercury
  labels:
    app: mercury
  namespace: ttrss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mercury
  template:
    metadata:
      labels:
        app: mercury
    spec:
      containers:
      - name: mercury
        image: wangqiru/mercury-parser-api:latest
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 500m
            memory: 512Mi
