cluster/apps/ttrss/ttrss-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ttrss
  namespace: ttrss
  labels:
    app: ttrss
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: ttrss

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ttrss
  labels:
    app: ttrss
  namespace: ttrss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ttrss
  template:
    metadata:
      labels:
        app: ttrss
    spec:
      containers:
      - name: ttrss
        image: harbor.${SECRET_DOMAIN}/horsducommun/ttrss
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 500m
            memory: 512Mi
      imagePullSecrets:
        - name: docker-registry-ttrss
