cluster/apps/ttrss/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ttrss
  labels:
    app: ttrss
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  rules:
    - host: rss.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ttrss
                port:
                  number: 80
  tls:
    - hosts:
      - rss.${SECRET_DOMAIN}
      secretName: tls-rss-${SECRET_DOMAIN}
